# control-center

./: README.md  repo-config.json
.github/: org-context.json  sync-always.yml  sync-initial.yml
.github/actions/agentic-issue-triage/: action.yml
.github/metaprompts/: bolt.md  palette.md  scribe.md  sentinel.md  triage.md
.github/workflows/: ci.yml  ecosystem-connector.yml  ecosystem-control.yml  ecosystem-delegator.yml  ecosystem-fixer.yml  ecosystem-orchestrator.yml  ecosystem-reviewer.yml  ecosystem-triage.yml  jules-supervisor.yml  sync.yml
branch-rulesets/: Main.json  PRs.json
repository-files/always-sync/: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md
repository-files/always-sync/.github/actions/agentic-pr-review/: action.yml
repository-files/always-sync/.github/workflows/: cd.yml  ci.yml  ecosystem-connector.yml  ecosystem-delegator.yml  ecosystem-reviewer.yml
repository-files/docs/.github/workflows/: deploy.yml
repository-files/go/docs/: README.md
repository-files/initial-only/: .gitignore  README.md  pyproject.toml
repository-files/org-overrides/.github/workflows/: ci.yml
scripts/: configure-repos  create-repos  health-check.py  sync-secrets  sync-secrets.py  sync.py  validate-config
