[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replace-me"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Extended Data Library", email = "info@extended-data.io" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
